Prevent whitespace breaking inside needs labels
Use white-space: nowrap to prevent long labels from wrapping, such as:
`needs one thing or another`.

However, two very long `needs` labels right next to each other would
overflow past the right end of the Tracker column. Their two <a label>
elements were adjacent to each other in the DOM, thus they were not
allowed to break. So, we are adding additional text nodes with a simple
space to allow linebreaks. By using insertAdjacentHTML, we are inserting
the node without causing a reparse of the content, which is required since
we have live NodeLists. Using innerHTML ain't gonna work for us.

"In Firefox 8, we've added support for insertAdjacentHTML(). It's an
ancient feature of Internet Explorer that has recently been formalized in
HTML5."

Source: https://hacks.mozilla.org/2011/11/insertadjacenthtml-enables-faster-html-snippet-injection/

Fixes #1

--- a/css/inject/inject.css
+++ b/css/inject/inject.css
@@ -4,4 +4,5 @@
   color: white;
   margin: 0 2px;
   padding: 1px 6px 1px 6px;
+  white-space: nowrap;
 }
